# minibot

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/skills/homework-doc-solver/: SKILL.md  reference.md
config/: llm.yaml
scripts/: run_demo.py
src/minibot/: __init__.py
src/minibot/agents/: base.py  echo_agent.py
src/minibot/config/: settings.py
src/minibot/core/: app.py
src/minibot/memory/: store.py
src/minibot/rag/: __init__.py  document_parser.py  vector_store.py
src/minibot/tools/: base.py  echo_tool.py
src/minibot/web/: __init__.py  app.py
src/minibot/web/static/: index.html  main.js  styles.css
src/minibot/workflows/: chat_workflow.py
tests/: test_smoke.py
